@@ -1,5 +1,6 @@
 == Changelog ==
 = 1.6.1 =
+* Fix: Import products fixes
 * Enhancement: Filter by brand widget enhancements
 = 1.6.0 =
 * Feature: Migrate brands from the official WooCommerce Brand's plugin (pull request, thanks Chunkford)
